Tantárgy menüpont felület kész

--- a/KretaDesktop/App.xaml
+++ b/KretaDesktop/App.xaml
@@ -2,12 +2,13 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:KretaDesktop"
-             StartupUri="/View/MainWindow.xaml">
+             StartupUri="/View/MainWindow.xaml"
+             >
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Resources/ViewModelViewDataTamplate.xaml"></ResourceDictionary>
-                <ResourceDictionary Source="/Resources/HeaderButtonTemplate.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="/Resources/ButtonTemplate.xaml"></ResourceDictionary>
                 <ResourceDictionary Source="/Resources/MenuItemBaseStyle.xaml"></ResourceDictionary>
                 <ResourceDictionary Source="/Resources/AppStyling.xaml"></ResourceDictionary>
                 <ResourceDictionary Source="/Resources/Icons.xaml"></ResourceDictionary>
