--- a/KretaDesktop/Resources/AppStyling.xaml
+++ b/KretaDesktop/Resources/AppStyling.xaml
@@ -1,13 +1,12 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
-    <SolidColorBrush x:Key="ContentBackgraoundColor" Color="#ff00202e"></SolidColorBrush>
-    <SolidColorBrush x:Key="ContentForegroundColor" Color="#ffff8531"></SolidColorBrush>
-    <SolidColorBrush x:Key="ContentTextBoxBackground" Color="DarkGoldenrod"></SolidColorBrush>
-    <SolidColorBrush x:Key="ContentTextBoxForgraound" Color="#003f5c"></SolidColorBrush>
+
+    <SolidColorBrush x:Key="ContentBackgraoundColor" Color="#02060A"></SolidColorBrush>
+    <SolidColorBrush x:Key="ContentForegroundColor" Color="White"></SolidColorBrush>
+    <SolidColorBrush x:Key="ContentTextBoxBackground" Color="#0D2644"></SolidColorBrush>
+    <SolidColorBrush x:Key="ContentTextBoxForgraound" Color="White"></SolidColorBrush>
 
     <SolidColorBrush x:Key="HeaderBackgroundColor" Color="#ff003f5c"></SolidColorBrush>
-
-    <SolidColorBrush x:Key="FiltringBackgroundColor" Color="#ff003f5c"></SolidColorBrush>
-    
+    <SolidColorBrush x:Key="ExpanderBackgroundColor" Color="#ff003f5c"></SolidColorBrush>
+    <SolidColorBrush x:Key="NavigationBackgroundColor" Color="#ff003f5c"></SolidColorBrush>
 </ResourceDictionary>
