--- a/KretaDesktop/View/ContentListSubject.xaml
+++ b/KretaDesktop/View/ContentListSubject.xaml
@@ -17,37 +17,10 @@
         <Label FontSize="24" HorizontalAlignment="Left"
                Foreground="{DynamicResource ContentForegroundColor}"
                Margin=" 16 16 2 2"
-               >Tantárgyak</Label>
-        <Grid Grid.Row="1" VerticalAlignment="Top" Background="{DynamicResource FiltringBackgroundColor}">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
-                <ColumnDefinition Width="*"></ColumnDefinition>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
-            </Grid.ColumnDefinitions>
-            <Label Grid.Column="0" Style="{DynamicResource FormLabel}" Content="Szűrés:"></Label>
-            <TextBox Grid.Column="1" x:Name="tbFiltringSubjectName" Style="{DynamicResource FormTextBox}">
-                Valami
-            </TextBox>
-            <Button Grid.Column="2" Margin="12 2 32 2" Grid.Row="2" Width="100" Height="24" Content="Keresés" HorizontalAlignment="Left"></Button>
-            <StackPanel Grid.Column="3" Orientation="Horizontal">
-                <TextBlock  Margin="64 2 2 2" Foreground="{DynamicResource ContentForegroundColor}" Text="Rendezés:"></TextBlock>
-                <Grid Margin="2 0 0 2" Background="{DynamicResource ContentTextBoxBackground}" Height="16" Width="16">
-                    <Image Source="{StaticResource content-sort-down}" />
-                </Grid>
-            </StackPanel>
-            <StackPanel Grid.Column="4" Orientation="Horizontal" Margin="2 2 18 2">
-                <TextBlock HorizontalAlignment="Right" Margin="2" Foreground="{DynamicResource ContentForegroundColor}" Text="Elem/oldal:"></TextBlock>
-                <ComboBox HorizontalAlignment="Right" Grid.Column="5">
-                    <ComboBoxItem>10</ComboBoxItem>
-                    <ComboBoxItem>20</ComboBoxItem>
-                    <ComboBoxItem>30</ComboBoxItem>
-                </ComboBox>
-            </StackPanel>
-        </Grid>
-        <Expander Grid.Row="2" Header="Tantárgy adatai" Margin="2 24 2 2" Foreground="{DynamicResource ContentForegroundColor}">
-            <Grid>
+               >Tantárgyak
+        </Label>
+        <Expander Grid.Row="1" Header="Tantárgy adatai" Margin="0 24 2 2" Foreground="{DynamicResource ContentForegroundColor}" >
+            <Grid Background="{DynamicResource ExpanderBackgroundColor}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="100"></ColumnDefinition>
                     <ColumnDefinition Width="200"></ColumnDefinition>
@@ -66,11 +39,42 @@
                 <TextBox Grid.Row="1" Grid.Column="1" x:Name="tbSubjectName" Style="{DynamicResource FormTextBox}">
                     SubjectName
                 </TextBox>
-                <Button Margin="100 2 2 2" Width="100" Height="24" Grid.Row="0" Grid.Column="2" Content="Mentés"></Button>
-                <Button Margin="100 2 2 2" Grid.Row="1" Width="100" Height="24" Grid.Column="2" Content="Törlés"></Button>
-                <Button Margin="2 8 2 2" Grid.Row="2" Width="100" Height="24" Grid.Column="1" Content="Új" HorizontalAlignment="Left"></Button>
+                <Button Style="{DynamicResource ContentButton}" Margin="100 2 2 2" Grid.Row="0" Grid.Column="2" Content="Mentés"></Button>
+                <Button Style="{DynamicResource ContentButton}" Margin="100 2 2 2" Grid.Row="1" Grid.Column="2" Content="Törlés"></Button>
+                <Button Style="{DynamicResource ContentButton}" Margin="2 8 2 8" Grid.Row="2"  Grid.Column="1" Content="Új"></Button>
             </Grid>
         </Expander>
+        <Grid Grid.Row="2" VerticalAlignment="Top">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="15.169"></ColumnDefinition>
+                <ColumnDefinition Width="0"/>
+                <ColumnDefinition Width="5.056"/>
+                <ColumnDefinition Width="46.159"/>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Label Grid.Column="1" Style="{DynamicResource FormLabel}" Content="Szűrés:" Grid.ColumnSpan="3" Margin="3,4,2,2"></Label>
+            <TextBox Grid.Column="4" x:Name="tbFiltringSubjectName" Style="{DynamicResource FormTextBox}" Margin="2,5,2,5">
+                Valami
+            </TextBox>
+            <Button Grid.Column="5" Margin="12,4,0,4" Width="100" Height="24" Content="Keresés" HorizontalAlignment="Left"/>
+            <StackPanel Grid.Column="6" Orientation="Horizontal" Margin="32,0,0,0">
+                <TextBlock  Margin="64 2 2 2" Foreground="{DynamicResource ContentForegroundColor}" Text="Rendezés:"></TextBlock>
+                <Grid Margin="2 0 0 2" Background="{DynamicResource ContentTextBoxBackground}" Height="16" Width="16">
+                    <Image Source="{StaticResource content-sort-down}" />
+                </Grid>
+            </StackPanel>
+            <StackPanel Grid.Column="7" Orientation="Horizontal" Margin="2,2,18,2">
+                <TextBlock HorizontalAlignment="Right" Margin="2" Foreground="{DynamicResource ContentForegroundColor}" Text="Elem/oldal:"></TextBlock>
+                <ComboBox HorizontalAlignment="Right" Grid.Column="5">
+                    <ComboBoxItem>10</ComboBoxItem>
+                    <ComboBoxItem>20</ComboBoxItem>
+                    <ComboBoxItem>30</ComboBoxItem>
+                </ComboBox>
+            </StackPanel>
+        </Grid>
         <DataGrid Grid.Row="3" 
                   AutoGenerateColumns="False"
                   CanUserAddRows="False"
@@ -83,19 +87,19 @@
                 <DataGridTextColumn Width="200" Header="Tantárgy név"></DataGridTextColumn>
             </DataGrid.Columns>
         </DataGrid>
-        <Grid Grid.Row="5" Margin="5">
+        <Grid Background="{DynamicResource NavigationBackgroundColor}" Grid.Row="5" Margin="5">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="100" />
+                <ColumnDefinition Width="100" />
+                <ColumnDefinition Width="20" />
+                <ColumnDefinition Width="100" />
+                <ColumnDefinition Width="100" />
             </Grid.ColumnDefinitions>
-            <Button Content="&lt;&lt;" Grid.Column="0"  Command="{Binding FirstPageCmd}" />
-            <Button Content="&lt;" Grid.Column="1" Command="{Binding PreviousPageCmd}" />
+            <Button Style="{DynamicResource ContentButton}" Content="&lt;&lt;" Grid.Column="0" />
+            <Button Style="{DynamicResource ContentButton}" Content="&lt;" Grid.Column="1" />
             <TextBlock Text="{Binding CurrentPage}" Grid.Column="2" HorizontalAlignment="Center"/>
-            <Button Content=">" Grid.Column="3" Command="{Binding NextPageCmd}" />
-            <Button Content=">>" Grid.Column="4" Command="{Binding LastPageCmd}" />
+            <Button Style="{DynamicResource ContentButton}" Content=">" Grid.Column="3" />
+            <Button Style="{DynamicResource ContentButton}" Content=">>" Grid.Column="4" />
         </Grid>
 
     </Grid>
