--- a/KretaDesktop/View/ContentListSubject.xaml
+++ b/KretaDesktop/View/ContentListSubject.xaml
@@ -4,8 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:KretaDesktop.View"
+             xmlns:viewmodels="clr-namespace:KretaDesktop.ViewModel"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.DataContext>
+        <viewmodels:ContentListSubjectViewModel/>
+    </UserControl.DataContext>
     <Grid Background="{DynamicResource ContentBackgraoundColor}">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"></RowDefinition>
@@ -59,7 +63,7 @@
             <TextBox Grid.Column="4" x:Name="tbFiltringSubjectName" Style="{DynamicResource FormTextBox}" Margin="2,5,2,5">
                 Valami
             </TextBox>
-            <Button Grid.Column="5" Margin="12,4,0,4" Width="100" Height="24" Content="Keresés" HorizontalAlignment="Left"/>
+            <Button x:Name="btKeres" Grid.Column="5" Margin="12,4,0,4" Width="100" Height="24" Content="Keresés" HorizontalAlignment="Left"/>
             <StackPanel Grid.Column="6" Orientation="Horizontal" Margin="32,0,0,0">
                 <TextBlock  Margin="64 2 2 2" Foreground="{DynamicResource ContentForegroundColor}" Text="Rendezés:"></TextBlock>
                 <Grid Margin="2 0 0 2" Background="{DynamicResource ContentTextBoxBackground}" Height="16" Width="16">
@@ -75,16 +79,17 @@
                 </ComboBox>
             </StackPanel>
         </Grid>
-        <DataGrid Grid.Row="3" 
-                  AutoGenerateColumns="False"
-                  CanUserAddRows="False"
-                  CanUserDeleteRows="False"
-                  IsReadOnly="True"
-                  SelectionMode="Single"                  
+        <DataGrid x:Name="dgSubjects"
+                  Grid.Row="3" 
+                  ItemsSource="{Binding Subjects}"
+                  Style="{DynamicResource DataGridCrudStyle}"
+                  Width="300"
+                  ColumnHeaderStyle="{DynamicResource DataGridCRUDHeaderStyle}"
                   >
+
             <DataGrid.Columns>
-                <DataGridTextColumn Width="40" Header="Id."></DataGridTextColumn>
-                <DataGridTextColumn Width="200" Header="Tantárgy név"></DataGridTextColumn>
+                <DataGridTextColumn Width="40" Header="Id." Binding="{Binding Id}"></DataGridTextColumn>
+                <DataGridTextColumn Width="220" Header="Tantárgy név" Binding="{Binding SubjectName}"></DataGridTextColumn>
             </DataGrid.Columns>
         </DataGrid>
         <Grid Background="{DynamicResource NavigationBackgroundColor}" Grid.Row="5" Margin="5">
