--- a/KretaDesktop/View/ContentListSubject.xaml
+++ b/KretaDesktop/View/ContentListSubject.xaml
@@ -35,14 +35,14 @@
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
                 </Grid.RowDefinitions>
-                <Label Style="{DynamicResource FormLabel}" Grid.Row="0" Grid.Column="0"  Content="Tantárgy id:"></Label>
-                <TextBox Grid.Row="0" Grid.Column="1" x:Name="tbSubjectId" Style="{DynamicResource FormTextBox}">
-                    Id
-                </TextBox>
+                <Label Style="{DynamicResource FormLabel}" Grid.Row="0" Grid.Column="0"  Content="Azon."></Label>
+                <TextBox Grid.Row="0" Grid.Column="1" x:Name="tbSubjectId" Style="{DynamicResource FormTextBox}"
+                         Text="{Binding SelectedSubject.Id}"       
+                />
                 <Label Style="{DynamicResource FormLabel}" Grid.Row="1" Grid.Column="0" Content="Tantárgy név:"></Label>
-                <TextBox Grid.Row="1" Grid.Column="1" x:Name="tbSubjectName" Style="{DynamicResource FormTextBox}">
-                    SubjectName
-                </TextBox>
+                <TextBox Grid.Row="1" Grid.Column="1" x:Name="tbSubjectName" Style="{DynamicResource FormTextBox}"
+                         Text="{Binding SelectedSubject.SubjectName}"        
+                 />
                 <Button Style="{DynamicResource ContentButton}" Margin="100 2 2 2" Grid.Row="0" Grid.Column="2" Content="Mentés"></Button>
                 <Button Style="{DynamicResource ContentButton}" Margin="100 2 2 2" Grid.Row="1" Grid.Column="2" Content="Törlés"></Button>
                 <Button Style="{DynamicResource ContentButton}" Margin="2 8 2 8" Grid.Row="2"  Grid.Column="1" Content="Új"></Button>
@@ -50,27 +50,24 @@
         </Expander>
         <Grid Grid.Row="2" VerticalAlignment="Top">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="15.169"></ColumnDefinition>
-                <ColumnDefinition Width="0"/>
-                <ColumnDefinition Width="5.056"/>
-                <ColumnDefinition Width="46.159"/>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
                 <ColumnDefinition Width="*"></ColumnDefinition>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <Label Grid.Column="1" Style="{DynamicResource FormLabel}" Content="Szűrés:" Grid.ColumnSpan="3" Margin="3,4,2,2"></Label>
-            <TextBox Grid.Column="4" x:Name="tbFiltringSubjectName" Style="{DynamicResource FormTextBox}" Margin="2,5,2,5">
+            <Label Grid.Column="0" Style="{DynamicResource FormLabel}" Content="Szűrés:" Grid.ColumnSpan="3" Margin="3,4,2,2"></Label>
+            <TextBox Grid.Column="1" x:Name="tbFiltringSubjectName" Style="{DynamicResource FormTextBox}" Margin="2,5,2,5">
                 Valami
             </TextBox>
-            <Button x:Name="btKeres" Grid.Column="5" Margin="12,4,0,4" Width="100" Height="24" Content="Keresés" HorizontalAlignment="Left"/>
-            <StackPanel Grid.Column="6" Orientation="Horizontal" Margin="32,0,0,0">
+            <Button Style="{DynamicResource ContentButton}" Grid.Column="2" Content="Keresés" />
+            <StackPanel Grid.Column="3" Orientation="Horizontal" Margin="32,0,0,0">
                 <TextBlock  Margin="64 2 2 2" Foreground="{DynamicResource ContentForegroundColor}" Text="Rendezés:"></TextBlock>
                 <Grid Margin="2 0 0 2" Background="{DynamicResource ContentTextBoxBackground}" Height="16" Width="16">
                     <Image Source="{StaticResource content-sort-down}" />
                 </Grid>
             </StackPanel>
-            <StackPanel Grid.Column="7" Orientation="Horizontal" Margin="2,2,18,2">
+            <StackPanel Grid.Column="4" Orientation="Horizontal" Margin="2,2,18,2">
                 <TextBlock HorizontalAlignment="Right" Margin="2" Foreground="{DynamicResource ContentForegroundColor}" Text="Elem/oldal:"></TextBlock>
                 <ComboBox HorizontalAlignment="Right" Grid.Column="5">
                     <ComboBoxItem>10</ComboBoxItem>
@@ -82,12 +79,13 @@
         <DataGrid x:Name="dgSubjects"
                   Grid.Row="3" 
                   ItemsSource="{Binding Subjects}"
+                  SelectedItem="{Binding SelectedSubject}"
                   Style="{DynamicResource DataGridCrudStyle}"
                   Width="300"
                   ColumnHeaderStyle="{DynamicResource DataGridCRUDHeaderStyle}"
                   >
             <DataGrid.Columns>
-                <DataGridTextColumn Width="40" Header="Id." Binding="{Binding Id}"></DataGridTextColumn>
+                <DataGridTextColumn Width="40" Header="Azon." Binding="{Binding Id}"></DataGridTextColumn>
                 <DataGridTextColumn Width="220" Header="Tantárgy név" Binding="{Binding SubjectName}"></DataGridTextColumn>
             </DataGrid.Columns>
         </DataGrid>
