--- a/KretaDesktop/Resources/ButtonTemplate.xaml
+++ b/KretaDesktop/Resources/ButtonTemplate.xaml
@@ -2,6 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <SolidColorBrush x:Key="StandardButtonBackground" Color="#00202e"></SolidColorBrush>
+    <SolidColorBrush x:Key="StandardEnabledFalseBackground" Color="Red"></SolidColorBrush>
     <SolidColorBrush x:Key="StandardButtonForeground" Color="#ff8531"></SolidColorBrush>
     
     <Style TargetType="Button" x:Key="HeaderButtonMenuItemEllpse">
@@ -34,6 +35,14 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+        <Style.Triggers>
+            <Trigger Property="IsEnabled" Value="True">
+                <Setter Property="Background" Value="{StaticResource StandardButtonBackground}"></Setter>
+            </Trigger>
+            <Trigger Property="IsEnabled" Value="False">
+                <Setter Property="Background" Value="{StaticResource StandardEnabledFalseBackground}"></Setter>
+            </Trigger>
+        </Style.Triggers>
     </Style>
 
 
