--- a/KretaDesktop/View/ContentListSubject.xaml
+++ b/KretaDesktop/View/ContentListSubject.xaml
@@ -7,9 +7,11 @@
              xmlns:viewmodels="clr-namespace:KretaDesktop.ViewModel"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <!--
     <UserControl.DataContext>
         <viewmodels:ContentListSubjectViewModel/>
     </UserControl.DataContext>
+     -->
     <Grid Background="{DynamicResource ContentBackgraoundColor}">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"></RowDefinition>
@@ -80,7 +82,7 @@
                   Grid.Row="3" 
                   ItemsSource="{Binding Subjects}"
                   SelectedItem="{Binding SelectedSubject}"
-                  SelectedIndex="0"
+                  SelectedIndex="{Binding SelectedItemIndex}"
                   Style="{DynamicResource DataGridCrudStyle}"
                   Width="300"
                   ColumnHeaderStyle="{DynamicResource DataGridCRUDHeaderStyle}"
@@ -103,6 +105,8 @@
             <StackPanel Orientation="Horizontal" Grid.Column="2">
                 <Label x:Name="Page" Foreground="{DynamicResource ContentForegroundColor}" Content="Oldal:"></Label>
                 <Label x:Name="tbCurrentPage" Foreground="{DynamicResource ContentForegroundColor}" Content="{Binding CurrentPage}"/>
+                <Label Content="/"></Label>
+                <Label x:Name="tbNumberOfPage" Foreground="{DynamicResource ContentForegroundColor}" Content="{Binding NumberOfPage}"/>
             </StackPanel>
             <Button x:Name="btNextPage" Style="{DynamicResource ContentButton}" Command="{Binding NextPageCommand}" Content=">" Grid.Column="3" />
             <Button x:Name="btLastPage" Style="{DynamicResource ContentButton}" Command="{Binding LastPageCommand}" Content=">>" Grid.Column="4" />
