--- a/KretaDesktop/View/ContentListSubject.xaml
+++ b/KretaDesktop/View/ContentListSubject.xaml
@@ -10,6 +10,7 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
         <converter:BoolToSortIconConverter x:Key="boolToIconConverter"></converter:BoolToSortIconConverter>
+        <converter:BoolToVisibilityConverter x:Key="boolToVisibilityConverter"></converter:BoolToVisibilityConverter>
     </UserControl.Resources>
     <!--
     <UserControl.DataContext>
@@ -67,7 +68,7 @@
                 Valami
             </TextBox>
             <Button Style="{DynamicResource ContentButton}" Grid.Column="2" Content="Keresés" />
-            <StackPanel Grid.Column="3" Orientation="Horizontal" Margin="32,0,0,0">
+            <StackPanel Visibility="{Binding IsSortingVisible, Converter={StaticResource boolToVisibilityConverter}}" Grid.Column="3" Orientation="Horizontal" Margin="32,0,0,0">
                 <TextBlock  Margin="64 6 2 2" Foreground="{DynamicResource ContentForegroundColor}" Text="Rendezés:"></TextBlock>
                 <StackPanel Margin="2 0 0 2" Background="{DynamicResource ContentForegroundColor}" Height="18" Width="18">
                     <Button Command="{Binding SortingCommand}">
