Save és insert is működik

--- a/KretaDesktop/View/ContentListSubject.xaml
+++ b/KretaDesktop/View/ContentListSubject.xaml
@@ -51,7 +51,12 @@
                 <TextBox Grid.Row="1" Grid.Column="1" x:Name="tbSubjectName" Style="{DynamicResource FormTextBox}"
                          Text="{Binding SelectedSubject.SubjectName}"        
                  />
-                <Button Style="{DynamicResource ContentButton}" Margin="100 2 2 2" Grid.Row="0" Grid.Column="2" Content="Mentés"></Button>
+                <Button Style="{DynamicResource ContentButton}" 
+                        Command="{Binding SaveCommand}"
+                        CommandParameter="{Binding SelectedSubject}"
+                        Margin="100 2 2 2" Grid.Row="0" Grid.Column="2" Content="Mentés">
+                    
+                </Button>
                 <Button Style="{DynamicResource ContentButton}" 
                         Command="{Binding DeleteCommand}" 
                         CommandParameter="{Binding SelectedSubject}" 
