--- a/KretaDesktop/App.xaml
+++ b/KretaDesktop/App.xaml
@@ -14,6 +14,7 @@
                 <ResourceDictionary Source="/Resources/Icons.xaml"></ResourceDictionary>
                 <ResourceDictionary Source="/Resources/InputForm.xaml"></ResourceDictionary>
                 <ResourceDictionary Source="/Resources/DataGridStyling.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="/Resources/ValidationStyle.xaml"></ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
