--- a/KretaDesktop/Resources/ViewModelViewDataTamplate.xaml
+++ b/KretaDesktop/Resources/ViewModelViewDataTamplate.xaml
@@ -1,7 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:views="clr-namespace:KretaDesktop.View"
-                    xmlns:viewmodels="clr-namespace:KretaDesktop.ViewModel">
+                    xmlns:viewmodels="clr-namespace:KretaDesktop.ViewModel"
+                    xmlns:viewmodelscontent="clr-namespace:KretaDesktop.ViewModel.Content">
     <DataTemplate DataType="{x:Type viewmodels:HeaderAppNameViewModel}">
         <views:HeaderAppName></views:HeaderAppName>
     </DataTemplate>
@@ -11,7 +12,7 @@
     <DataTemplate DataType="{x:Type viewmodels:HeaderWithContentMoveViewModel}">
         <views:HeaderWithContentMove></views:HeaderWithContentMove>
     </DataTemplate>
-    <DataTemplate DataType="{x:Type viewmodels:ContentListSubjectViewModel}">
+    <DataTemplate DataType="{x:Type viewmodelscontent:ContentListSubjectViewModel}">
         <views:ContentListSubject></views:ContentListSubject>
     </DataTemplate>
 </ResourceDictionary>
