--- a/KretaDesktop/Resources/ValidationStyle.xaml
+++ b/KretaDesktop/Resources/ValidationStyle.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    
     <Style TargetType="{x:Type TextBox}" x:Key="ToolTipError">
         <Style.Triggers>
             <Trigger Property="Validation.HasError" Value="true">
@@ -7,6 +8,7 @@
             </Trigger>
         </Style.Triggers>
     </Style>
+    
     <ControlTemplate x:Key="ValidationTemplate">
         <Grid>
             <Ellipse Fill="Red" Opacity="0.8" Width="10" Height="10"
@@ -15,4 +17,46 @@
             <AdornedElementPlaceholder />
         </Grid>
     </ControlTemplate>
+    
+    <ControlTemplate x:Key="ValidationTemplate2">
+        <StackPanel>
+            <StackPanel Orientation="Horizontal" DockPanel.Dock="Top">
+                <Grid Width="12" Height="12">
+                    <Ellipse Width="12" Height="12" 
+                             Fill="Yellow" HorizontalAlignment="Center" 
+                             VerticalAlignment="Center"/>
+                    <TextBlock Foreground="White" FontWeight="Heavy" 
+                               FontSize="8" HorizontalAlignment="Center" 
+                               VerticalAlignment="Center" TextAlignment="Center"
+                               ToolTip="{Binding ElementName=ErrorAdorner, 
+                               Path=AdornedElement.(Validation.Errors)[0].ErrorContent}">
+                        X</TextBlock>
+                </Grid>
+                <TextBlock Foreground="Red" FontSize="12" Margin="2,0,0,0" 
+                   Text="{Binding ElementName=placeholder, 
+                   Path=AdornedElement.(Validation.Errors)[0].ErrorContent}"/>
+            </StackPanel>
+            <AdornedElementPlaceholder x:Name="placeholder" />
+        </StackPanel>
+    </ControlTemplate>
+
+    <ControlTemplate x:Key="ValidationTemplate3">
+        <Grid>
+            <Border BorderBrush="#FFCB2E2E" BorderThickness="1" Background="#11FF0000" IsHitTestVisible="False" x:Name="errorBorder"/>
+            <AdornedElementPlaceholder x:Name="placeholder" />
+            <Popup AllowsTransparency="True" HorizontalAlignment="Right" HorizontalOffset="0" VerticalOffset="0" PopupAnimation="Fade" Placement="Right" 
+                                   PlacementTarget="{Binding ElementName=errorBorder}" IsOpen="{Binding ElementName=placeholder, Path=AdornedElement.IsFocused, Mode=OneWay}">
+                <StackPanel Orientation="Horizontal">
+                    <Polygon  VerticalAlignment="Center" Points="0,4 4,0 4,8" Fill="#FFCB2E2E" Stretch="Fill" Stroke="#FFCB2E2E"
+                                      StrokeThickness="2" />
+                    <Border Background="#FFCB2E2E" CornerRadius="4" Padding="4">
+                        <TextBlock HorizontalAlignment="Center" Foreground="White" FontWeight="Bold" Margin="2,0,0,0"
+                                                   Text="{Binding ElementName=placeholder, Path=AdornedElement.(Validation.Errors)[0].ErrorContent, Mode=OneWay}" />
+                    </Border>
+                </StackPanel>
+            </Popup>
+        </Grid>
+    </ControlTemplate>
+
+
 </ResourceDictionary>
