--- a/KretaDesktop/View/ContentListSubject.xaml
+++ b/KretaDesktop/View/ContentListSubject.xaml
@@ -43,16 +43,23 @@
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
                 </Grid.RowDefinitions>
-                <Label Style="{DynamicResource FormLabel}" Grid.Row="0" Grid.Column="0"  Content="Azon."></Label>
-                <TextBox Grid.Row="0" Grid.Column="1" x:Name="txtSubjectId" Style="{DynamicResource FormTextBox}"
+                <Button Style="{DynamicResource ContentButton}" 
+                        Command="{Binding NewCommand}"
+                        Margin="2 8 2 8" Grid.Row="0"  Grid.Column="1" Content="Új">
+
+                </Button>
+                <Label Style="{DynamicResource FormLabel}" Grid.Row="1" Grid.Column="0"  Content="Azon."></Label>
+                <TextBox Grid.Row="1" Grid.Column="1" x:Name="txtSubjectId" Style="{DynamicResource FormTextBox}"
                          IsReadOnly="True"
                          Text="{Binding SelectedSubject.Id}"       
                 />
-                <Label Style="{DynamicResource FormLabel}" Grid.Row="1" Grid.Column="0" Content="Tantárgy név:"></Label>
-                <TextBox Grid.Row="1" Grid.Column="1" x:Name="txtSubjectName" 
+                <Label Style="{DynamicResource FormLabel}" Grid.Row="2" Grid.Column="0" Content="Tantárgy név:"></Label>
+                <TextBox Grid.Row="2" Grid.Column="1" x:Name="txtSubjectName" 
                          Style="{DynamicResource FormTextBox}"
-                         Validation.ErrorTemplate="{StaticResource ValidationTemplate}">
+                         Validation.ErrorTemplate="{StaticResource ValidationTemplate3}">
                     <TextBox.Text>
                         <Binding Path="SelectedSubject.SubjectName" ValidatesOnDataErrors="True" UpdateSourceTrigger="PropertyChanged">
                             <Binding.ValidationRules>
@@ -61,33 +68,34 @@
                         </Binding>
                     </TextBox.Text>
                 </TextBox>
-                <Button Command="{Binding SaveCommand}"
-                        CommandParameter="{Binding SelectedSubject}"
-                        Margin="100 2 2 2" Grid.Row="0" Grid.Column="2" Content="Mentés">
-                    <!--<Button.Style>
-                        <Style TargetType="{x:Type Button}" BasedOn="{StaticResource ContentButton}">
-                            <Style.Triggers>
-                                <MultiDataTrigger>
-                                    <MultiDataTrigger.Conditions>
-                                        <Condition Binding="{Binding ElementName=txtSubjectName, Path=(Validation.HasErrors)}" Value="false" />
-                                    </MultiDataTrigger.Conditions>
-                                </MultiDataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </Button.Style>-->
-                    <Button.IsEnabled>
-                        <MultiBinding Converter="{StaticResource InverseAndBooleansToBooleanConverter}" UpdateSourceTrigger="PropertyChanged">
-                            <Binding ElementName="txtSubjectName" Path="(Validation.HasError)"/>
-                        </MultiBinding>
-                    </Button.IsEnabled>
-                </Button>
-                <Button Style="{DynamicResource ContentButton}" 
-                        Command="{Binding DeleteCommand}" 
-                        CommandParameter="{Binding SelectedSubject}" 
-                        Margin="100 2 2 2" Grid.Row="1" Grid.Column="2" Content="Törlés"></Button>
-                <Button Style="{DynamicResource ContentButton}" 
-                        Command="{Binding NewCommand}"
-                        Margin="2 8 2 8" Grid.Row="2"  Grid.Column="1" Content="Új"></Button>
+                <StackPanel Orientation="Horizontal" Grid.Row="3" Grid.Column="1" HorizontalAlignment="Center">
+                    <Button Command="{Binding SaveCommand}"
+                            CommandParameter="{Binding SelectedSubject}"
+                            Margin="2 2 2 4"  Content="Mentés">
+                        <!--<Button.Style>
+                            <Style TargetType="{x:Type Button}" BasedOn="{StaticResource ContentButton}">
+                                <Style.Triggers>
+                                    <MultiDataTrigger>
+                                        <MultiDataTrigger.Conditions>
+                                            <Condition Binding="{Binding ElementName=txtSubjectName, Path=(Validation.HasErrors)}" Value="false" />
+                                        </MultiDataTrigger.Conditions>
+                                    </MultiDataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Button.Style>-->
+                        <Button.IsEnabled>
+                            <MultiBinding Converter="{StaticResource InverseAndBooleansToBooleanConverter}" UpdateSourceTrigger="PropertyChanged">
+                                <Binding ElementName="txtSubjectName" Path="(Validation.HasError)"/>
+                            </MultiBinding>
+                        </Button.IsEnabled>
+                    </Button>
+                    <Button Style="{DynamicResource ContentButton}" 
+                            Command="{Binding DeleteCommand}" 
+                            CommandParameter="{Binding SelectedSubject}" 
+                            Margin="4 2 2 2" Content="Törlés">
+
+                    </Button>
+                </StackPanel>
             </Grid>
         </Expander>
         <Grid Grid.Row="2" VerticalAlignment="Top">
