A változtatott gomb betű eltünik, háttérsznt nem változtatja

--- a/KretaDesktop/Resources/ButtonTemplate.xaml
+++ b/KretaDesktop/Resources/ButtonTemplate.xaml
@@ -36,11 +36,8 @@
             </Setter.Value>
         </Setter>
         <Style.Triggers>
-            <Trigger Property="IsEnabled" Value="True">
-                <Setter Property="Background" Value="{StaticResource StandardButtonBackground}"></Setter>
-            </Trigger>
             <Trigger Property="IsEnabled" Value="False">
-                <Setter Property="Background" Value="{StaticResource StandardEnabledFalseBackground}"></Setter>
+                <Setter Property="Foreground" Value="{StaticResource StandardButtonBackground}"></Setter>
             </Trigger>
         </Style.Triggers>
     </Style>
