--- a/KretaDesktop/Resources/ViewModelViewDataTamplate.xaml
+++ b/KretaDesktop/Resources/ViewModelViewDataTamplate.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:views="clr-namespace:KretaDesktop.View"
+                    xmlns:viewscontent="clr-namespace:KretaDesktop.View.Content"
                     xmlns:viewmodels="clr-namespace:KretaDesktop.ViewModel"
                     xmlns:viewmodelscontent="clr-namespace:KretaDesktop.ViewModel.Content">
     <DataTemplate DataType="{x:Type viewmodels:HeaderAppNameViewModel}">
@@ -13,6 +14,6 @@
         <views:HeaderWithContentMove></views:HeaderWithContentMove>
     </DataTemplate>
     <DataTemplate DataType="{x:Type viewmodelscontent:ContentListSubjectViewModel}">
-        <views:ContentListSubject></views:ContentListSubject>
+        <viewscontent:ContentListSubject></viewscontent:ContentListSubject>
     </DataTemplate>
 </ResourceDictionary>
